--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,22 @@
 Package: RcppNumerical
 Type: Package
-Title: What the Package Does (Title Case)
+Title: 'Rcpp' Integration for Open Source Numerical Computing Libraries
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Authors@R: c(
+    person("Yixuan", "Qiu", , "yixuan.qiu@cos.name", c("aut", "cre")),
+    person("Sreekumar", "Balan", "T.", role = "aut",
+           comment = "Numerical integration library"),
+    person("Matt", "Beall", role = "aut",
+           comment = "Numerical integration library"),
+    person("Mark", "Sauder", role = "aut",
+           comment = "Numerical integration library")
+    )
+Maintainer: Yixuan Qiu <yixuan.qiu@cos.name>
+Description: A collection of open source libraries for numerical computing
+    (numerical integration, optmization etc.) and its integration with 'Rcpp'.
+License: MPL (>= 2)
 LazyData: TRUE
-Imports: 
-    Rcpp (>= 0.12.4)
-LinkingTo: 
+Imports:
     Rcpp
+LinkingTo:
+    Rcpp, RcppEigen
