--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: RcppNumerical
 Type: Package
-Title: 'Rcpp' Integration for Open Source Numerical Computing Libraries
+Title: 'Rcpp' Integration for Header-Only Numerical Computing Libraries
 Version: 0.1.0
 Authors@R: c(
     person("Yixuan", "Qiu", , "yixuan.qiu@cos.name", c("aut", "cre")),
-    person("Sreekumar", "Balan", "T.", role = "aut",
+    person("Sreekumar", "Balan", role = "aut",
            comment = "Numerical integration library"),
     person("Matt", "Beall", role = "aut",
            comment = "Numerical integration library"),
@@ -12,8 +12,8 @@ Authors@R: c(
            comment = "Numerical integration library")
     )
 Maintainer: Yixuan Qiu <yixuan.qiu@cos.name>
-Description: A collection of open source libraries for numerical computing
-    (numerical integration, optmization etc.) and its integration with 'Rcpp'.
+Description: A collection of header-only libraries for numerical computing
+    (numerical integration, optmization, etc.) and their integration with 'Rcpp'.
 License: MPL (>= 2)
 LazyData: TRUE
 Imports:
