--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Authors@R: c(
     person("Mark", "Sauder", role = "aut",
            comment = "Numerical integration library"),
     person("Naoaki", "Okazaki", role = "aut",
-           comment = "libLBFGS library"),
+           comment = "libLBFGS library")
     )
 Maintainer: Yixuan Qiu <yixuan.qiu@cos.name>
 Description: A collection of open source libraries for numerical computing
