--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: RcppNumerical
 Type: Package
 Title: 'Rcpp' Integration for Numerical Computing Libraries
-Version: 0.1.0
+Version: 0.2.0
 Authors@R: c(
     person("Yixuan", "Qiu", , "yixuan.qiu@cos.name", c("aut", "cre")),
     person("Sreekumar", "Balan", role = "aut",
@@ -11,13 +11,15 @@ Authors@R: c(
     person("Mark", "Sauder", role = "aut",
            comment = "Numerical integration library"),
     person("Naoaki", "Okazaki", role = "aut",
-           comment = "libLBFGS library")
+           comment = "libLBFGS library"),
+    person("Thomas", "Hahn", role = "aut",
+           comment = "Cuba library")
     )
 Maintainer: Yixuan Qiu <yixuan.qiu@cos.name>
 Description: A collection of open source libraries for numerical computing
     (numerical integration, optmization, etc.) and their integration with
     'Rcpp'.
-License: MPL (>= 2)
+License: GPL (>= 2)
 Copyright: See file COPYRIGHTS
 LazyData: TRUE
 Imports:
