--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: RcppNumerical
 Type: Package
 Title: 'Rcpp' Integration for Numerical Computing Libraries
-Version: 0.2.0
+Version: 0.2-0
+Date: 2016-04-23
 Authors@R: c(
     person("Yixuan", "Qiu", , "yixuan.qiu@cos.name", c("aut", "cre")),
     person("Sreekumar", "Balan", role = "aut",
@@ -17,7 +18,7 @@ Authors@R: c(
     )
 Maintainer: Yixuan Qiu <yixuan.qiu@cos.name>
 Description: A collection of open source libraries for numerical computing
-    (numerical integration, optmization, etc.) and their integration with
+    (numerical integration, optimization, etc.) and their integration with
     'Rcpp'.
 License: GPL (>= 2)
 Copyright: See file COPYRIGHTS
