--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: RcppNumerical
 Type: Package
 Title: 'Rcpp' Integration for Numerical Computing Libraries
 Version: 0.2-2
-Date: 2016-09-05
+Date: 2016-12-08
 Authors@R: c(
     person("Yixuan", "Qiu", , "yixuan.qiu@cos.name", c("aut", "cre")),
     person("Sreekumar", "Balan", role = "aut",
@@ -12,9 +12,9 @@ Authors@R: c(
     person("Mark", "Sauder", role = "aut",
            comment = "Numerical integration library"),
     person("Naoaki", "Okazaki", role = "aut",
-           comment = "libLBFGS library"),
+           comment = "The libLBFGS library"),
     person("Thomas", "Hahn", role = "aut",
-           comment = "Cuba library")
+           comment = "The Cuba library")
     )
 Maintainer: Yixuan Qiu <yixuan.qiu@cos.name>
 Description: A collection of open source libraries for numerical computing
@@ -25,7 +25,8 @@ Copyright: See file COPYRIGHTS
 URL: https://github.com/yixuan/RcppNumerical
 BugReports: https://github.com/yixuan/RcppNumerical/issues
 LazyData: TRUE
-Imports:
-    Rcpp
+Imports: Rcpp
 LinkingTo: Rcpp, RcppEigen
+Suggests: knitr, prettydoc
+VignetteBuilder: knitr
 RoxygenNote: 5.0.1
