--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: RcppNumerical
 Type: Package
 Title: 'Rcpp' Integration for Numerical Computing Libraries
-Version: 0.3-2
-Date: 2018-02-18
+Version: 0.3-3
+Date: 2019-06-10
 Authors@R: c(
     person("Yixuan", "Qiu", , "yixuan.qiu@cos.name", c("aut", "cre")),
     person("Sreekumar", "Balan", role = "aut",
@@ -28,5 +28,5 @@ LazyData: TRUE
 Imports: Rcpp
 LinkingTo: Rcpp, RcppEigen
 Suggests: knitr, rmarkdown, prettydoc, mvtnorm, RcppEigen
-VignetteBuilder: knitr, rmarkdown, prettydoc
-RoxygenNote: 6.0.1
+VignetteBuilder: knitr, rmarkdown
+RoxygenNote: 6.1.1
